force-app/main/default/objects/copadoQuality__Compliance_Rule__c/fields/copadoQuality__Action__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Action__c</fullName>
    <inlineHelpText>The action to be performed by Copado when a rule violation occurs. Abort Process stops the Copado action and documents the violation in the result, but doesn’t send an email notification. Continue with Alert sends an email notification and documents the violation in the result, but doesn’t stop the action. Document Only doesn’t send an email notification and doesn’t stop the action, but documents the violation in the result.</inlineHelpText>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abort Process</fullName>
                <default>true</default>
                <label>Abort Process</label>
            </value>
            <value>
                <fullName>Continue with alert</fullName>
            </value>
            <value>
                <fullName>Document Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>