force-app/main/default/objects/copadoQuality__Compliance_Rule__c/fields/copadoQuality__Severity__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Severity__c</fullName>
    <inlineHelpText>The severity assigned to rule violations. You can use the severity to sort and prioritize the violations when you view the results.</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <default>true</default>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>